correction mobile

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 h1 {
   color: #eee;
   text-align: left;
-  font-size: 4rem;
+  font-size: 3.5rem;
   padding-left: 15px;
   width: 50%;
   border-bottom: 2px solid #eee; }
